Fixed more capitalization issues with Heaven and Hell (shouldn't be cap. if not a proper name of a particular heaven or hell).

--- a/01_agama/dirgha/DA_10.md
+++ b/01_agama/dirgha/DA_10.md
@@ -346,7 +346,7 @@ The monks accepted his instructions and listened.
 106\. “[2] The Tathāgata, the Arhat, arises in the world and teaches the sublime teaching that’s quiescent, unconditioned, and leads to the path of awakening. There are sentient beings born among animals … [3] among hungry ghosts … [4] among long-lived gods … [5] in border lands where they are unaware of it. The Buddha’s teaching doesn’t exist in such places, so there’s no opportunity to cultivate the religious practice.
 {:#p106}
 
-107\. “[6] The Tathāgata, the Arhat, arises in the world and teaches the sublime teaching that’s quiescent, unconditioned, and leads to the path of awakening. Some sentient beings are born in a central country, but they have wrong views, harbor deluded thoughts, and commit evil deeds. They’ll surely go to Hell where there’s no opportunity to cultivate the religious practice.
+107\. “[6] The Tathāgata, the Arhat, arises in the world and teaches the sublime teaching that’s quiescent, unconditioned, and leads to the path of awakening. Some sentient beings are born in a central country, but they have wrong views, harbor deluded thoughts, and commit evil deeds. They’ll surely go to hell where there’s no opportunity to cultivate the religious practice.
 {:#p107}
 
 108\. “[7] The Tathāgata, the Arhat, arises in the world and teaches the sublime teaching that’s quiescent, unconditioned, and leads to the path of awakening. Some sentient beings are born in a central country, but they’re deaf, blind, or mute and can’t learn the teaching. They have no opportunity to cultivate the religious practice.
