--- a/01_agama/dirgha/DA_20.md
+++ b/01_agama/dirgha/DA_20.md
@@ -485,7 +485,7 @@ He replied, “Very well. I’d be glad to hear it.”
 
 He answered, “No.”
 
-136\. The Buddha told the student, “Your own pettiness makes you unaware of what’s true or false, yet you slander and belittle the Śākyans while your own lineage is rooted in misdeeds that grow the source of Hell.
+136\. The Buddha told the student, “Your own pettiness makes you unaware of what’s true or false, yet you slander and belittle the Śākyans while your own lineage is rooted in misdeeds that grow the source of hell.
 {:#p136}
 
 137\. “Furthermore, student, someone can’t perfect the unsurpassed insight and conduct. Instead, they take a water bottle and a walking staff into a mountain forest, and they eat fallen fruit. Doing so, student, they can’t perfect the unsurpassed insight and conduct but instead practice this second method. How is it, student? Do you or your teacher practice this method?”
@@ -493,7 +493,7 @@ He answered, “No.”
 
 He answered, “No.”
 
-138\. The Buddha told the student, “Your own pettiness makes you unaware of what’s true or false, yet you slander and belittle the Śākyans while your own lineage is rooted in misdeeds that grow the source of Hell.
+138\. The Buddha told the student, “Your own pettiness makes you unaware of what’s true or false, yet you slander and belittle the Śākyans while your own lineage is rooted in misdeeds that grow the source of hell.
 {:#p138}
 
 139\. “Furthermore, student, [someone] can’t perfect the unsurpassed insight and conduct. Instead, they give up picking herbs and fallen fruit. They return to their town and rejoin the people there, building a thatched hut and eating grass or tree leaves. Doing so, student, they can’t perfect the [unsurpassed] insight and conduct. Instead, they practice this third method. How is it, student? Do you or your teacher practice this method?”
@@ -501,7 +501,7 @@ He answered, “No.”
 
 He answered, “No.”
 
-140\. The Buddha told the student, “Your own pettiness makes you unaware of what’s true or false, yet you slander and belittle the Śākyans while your own lineage is rooted in misdeeds that grow the source of Hell.
+140\. The Buddha told the student, “Your own pettiness makes you unaware of what’s true or false, yet you slander and belittle the Śākyans while your own lineage is rooted in misdeeds that grow the source of hell.
 {:#p140}
 
 141\. “Furthermore, student, [someone] can’t perfect the unsurpassed insight and conduct, but they don’t eat herbs and grass, fallen fruit, or grass and leaves. Instead, they build a large raised hall in a town or city, and people come from the east, west, south, and north to offer the donations that they can. Doing so, they can’t perfect the unsurpassed insight and conduct. Instead, they practice this fourth method. How is it, student? Do you or your teacher practice this method?”
@@ -509,7 +509,7 @@ He answered, “No.”
 
 He answered, “No.”
 
-142\. The Buddha told the student, “Your own pettiness makes you unaware of what’s true or false, yet you slander and belittle the Śākyans while your own lineage is rooted in misdeeds that grow the source of Hell.
+142\. The Buddha told the student, “Your own pettiness makes you unaware of what’s true or false, yet you slander and belittle the Śākyans while your own lineage is rooted in misdeeds that grow the source of hell.
 {:#p142}
 
 #### The Ancient Priests
@@ -534,7 +534,7 @@ He answered, “No.”
 
 He answered, “No.”
 
-147\. “Student, your own pettiness makes you unaware of what’s true or false, yet you slander and belittle the Śākyans while your own lineage is rooted in misdeeds that grow the source of Hell.
+147\. “Student, your own pettiness makes you unaware of what’s true or false, yet you slander and belittle the Śākyans while your own lineage is rooted in misdeeds that grow the source of hell.
 {:#p147}
 
 148\. “How is it, student? Just as those great sages and priests of antiquity praised and commended reciting the hymns, the priests today commend the recitation of Aṣṭaka and the others. They hand down their teachings and teach them to others hoping to be born in the Brahma Heaven, but it’s impossible.
