--- a/01_agama/dirgha/DA_30-4.md
+++ b/01_agama/dirgha/DA_30-4.md
@@ -536,7 +536,7 @@ Which resulted from his bad intent and words.’”
 
 #### The Three Heavenly Messengers
 
-123\. The Buddha told the monks, “There are three [heavenly] messengers.[\[4\]](#n4){:#ref4} What are the three? The first is old age, the second is illness, and the third is death. There are sentient beings whose physical conduct is bad, whose verbal conduct is bad, and whose mental intent is bad. When their bodies break up and their lives end, they fall to Hell.
+123\. The Buddha told the monks, “There are three [heavenly] messengers.[\[4\]](#n4){:#ref4} What are the three? The first is old age, the second is illness, and the third is death. There are sentient beings whose physical conduct is bad, whose verbal conduct is bad, and whose mental intent is bad. When their bodies break up and their lives end, they fall to hell.
 {:#p123}
 
 124\. “The wardens of hell bring these sinners to King Yama. Upon arriving, the wardens tell the King, ‘This one was summoned by the heavenly messengers. Please, great king, question them well about their account.’
