--- a/01_agama/ekottarika/11/EA_11_10.md
+++ b/01_agama/ekottarika/11/EA_11_10.md
@@ -73,7 +73,7 @@ next: ../12/EA_12_01.html
     <li>“Traversing the dhyānas and worldly understanding,<br/>
     One will lack liberation at the end.<br/>
     Not taking the steps to complete cessation,<br/>
-    One falls back into Hell.</li>
+    One falls back into hell.</li>
   </ul></td>
 </tr>
   <tr>
@@ -82,7 +82,7 @@ next: ../12/EA_12_01.html
   </tr>
   <tr>
     <td class='ch' title='T125.2.567c11'>「所以然者？ 提婆達兜愚癡、貪著利養。 起染著心，作五逆惡。 身壞命終，入地獄中。 所以然者？ 利養心重敗人善本，令人不到安隱之處。</td>
-    <td id='p14'>14. “Why is that? Devadatta was foolish and greedy for profit. He became obsessed, and then he committed the five terrible sins. When his body broke up and his life ended, he went to Hell. Why is that? Thoughts of profit seriously ruin a person’s roots of goodness and prevent them from reaching the place of safety.</td>
+    <td id='p14'>14. “Why is that? Devadatta was foolish and greedy for profit. He became obsessed, and then he committed the five terrible sins. When his body broke up and his life ended, he went to hell. Why is that? Thoughts of profit seriously ruin a person’s roots of goodness and prevent them from reaching the place of safety.</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.567c14'>「是故，諸比丘，設有利養心起便當求滅。 若不有心勿興想著。 如是，諸比丘，當作是學。」</td>
