--- a/01_agama/ekottarika/13/EA_13_05.md
+++ b/01_agama/ekottarika/13/EA_13_05.md
@@ -31,7 +31,7 @@ next: EA_13_06.html
   </tr>
   <tr>
     <td class='ch' title='T125.2.573c21'>「如是，比丘，若有人以此二十一結染著心者，當觀其人必墮惡趣，不生善處。 設，復，有人無此二十一結染著心者，當知斯人必生天上，不墮地獄中。 猶如新淨白㲲，隨意欲作何色，青、黄、赤、黒。 必成其色，終不敗壞。 所以然者？ 以其淨故。 此亦如是：其有無此二十一結染著心者，當觀其人必生天上，不墮惡趣。</td>
-    <td id='p5'>5. “Thus, monks, if someone’s mind is defiled by these twenty-one bonds, one should observe that person as sure to fall into bad destinies and not be born in a good place. Supposing, again, that someone’s mind isn’t defiled by any of these twenty-one bonds, one should know that this person is sure to be born up in heaven and not fall to Hell. They’re like a fresh and clean white cloth that’ll accept any color one decides to give it, whether it be blue, yellow, red, or black. It’s sure to become that color, and it’ll never fade. Why is that? Because it’s clean. Likewise, when someone’s mind isn’t defiled by any of these twenty-one bonds, one should know that this person is sure to be born up in heaven and not fall to Hell.</td>
+    <td id='p5'>5. “Thus, monks, if someone’s mind is defiled by these twenty-one bonds, one should observe that person as sure to fall into bad destinies and not be born in a good place. Supposing, again, that someone’s mind isn’t defiled by any of these twenty-one bonds, one should know that this person is sure to be born up in heaven and not fall to hell. They’re like a fresh and clean white cloth that’ll accept any color one decides to give it, whether it be blue, yellow, red, or black. It’s sure to become that color, and it’ll never fade. Why is that? Because it’s clean. Likewise, when someone’s mind isn’t defiled by any of these twenty-one bonds, one should know that this person is sure to be born up in heaven and not fall to hell.</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.573c28'>「若彼賢聖弟子起瞋恚心結。 觀已，便能息之 ⋯起恚害心結⋯起睡眠心結⋯起調戲心結⋯起疑心結⋯起怒心結⋯起忌心結⋯起惱心結⋯起疾心結⋯起憎心結⋯起無慚心結⋯起無愧心結⋯起幻心結⋯起姦心結⋯起僞心結⋯起諍心結⋯起憍心結⋯起慢心結⋯起妬心結⋯起増上慢心結⋯起貪心結⋯</td>
@@ -79,7 +79,7 @@ next: EA_13_06.html
   </tr>
   <tr>
     <td class='ch' title='T125.2.574b20'>「或有眾生身行惡、口行惡、心行惡。 誹謗賢聖，邪見，造邪見行。 身壞命終，生三惡道，趣泥㴝中。 或復有眾生身行善、口行善、意行善。 不誹謗賢聖，正見，無有邪見。 身壞命終，生天上，善處。 是謂清淨天眼觀眾生類。 有生者，有終者。 善色、醜色，善趣、惡趣。 若好、若醜，隨眾生行。 所作果報，皆悉知之。</td>
-    <td id='p17'>17. “Sometimes, there are sentient beings who behave badly with their bodies, badly with their speech, and badly with their thoughts. They slander noble people, have wrong views, and behave according to wrong views. When their bodies break up and their lives end, they’re born in the three bad destinies, headed for Hell. Sometimes, other sentient beings behave well with their bodies, well with their speech, and well with their thoughts. They don’t slander noble people, have right views, and have no wrong views. When their bodies break up and their lives end, they are born up in heaven, in a good place. This is called observing the classes of sentient beings with the clear heavenly eye. Some are being born, and some are dying. They have good and ugly forms and good and bad destinations. Whether they’re beautiful or disgusting depends upon to their conduct. He perceives all the rewards that they make for themselves.</td>
+    <td id='p17'>17. “Sometimes, there are sentient beings who behave badly with their bodies, badly with their speech, and badly with their thoughts. They slander noble people, have wrong views, and behave according to wrong views. When their bodies break up and their lives end, they’re born in the three bad destinies, headed for hell. Sometimes, other sentient beings behave well with their bodies, well with their speech, and well with their thoughts. They don’t slander noble people, have right views, and have no wrong views. When their bodies break up and their lives end, they are born up in heaven, in a good place. This is called observing the classes of sentient beings with the clear heavenly eye. Some are being born, and some are dying. They have good and ugly forms and good and bad destinations. Whether they’re beautiful or disgusting depends upon to their conduct. He perceives all the rewards that they make for themselves.</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.574b27'>「彼，復，以此三昧心清淨，無瑕穢，無有結使。 心性柔軟，逮於神通。 復，以漏盡通，而自娯樂。 彼觀『此苦』如實知之。 復，觀『苦習』⋯ 復，觀『苦盡』⋯ 復，觀『苦出要』如實知之。 彼作是觀已，欲漏心得解脫⋯有漏心⋯無明漏心得解脫。 已得解脫，便得解脫智： 『生死已盡，梵行已立，所作已辦。 更不復受有，如實知之。』</td>
