--- a/01_agama/ekottarika/13/EA_13_07.md
+++ b/01_agama/ekottarika/13/EA_13_07.md
@@ -171,7 +171,7 @@ next: ../14/EA_14_01.html
   </tr>
   <tr>
     <td class='ch' title='T125.2.575c24'>是時，釋提桓因白須菩提言： 「我亦有愁、憂、苦、惱。 今聞此法，無復有愁憂。 眾事猥多，欲還天上。 已亦有事及諸天事，皆悉猥多。」</td>
-    <td id='p11'>11. Śakra the Lord of Gods then said to Subhūti, “I also have sorrow, lamentation, pain, and trouble. Now that I’ve heard this Dharma, I won’t have any more sorrow and lamentation. The problems of my assembly are many, so I’m going to go back up to Heaven. My own personal duties and the problems among the gods are all quite numerous.”</td>
+    <td id='p11'>11. Śakra the Lord of Gods then said to Subhūti, “I also have sorrow, lamentation, pain, and trouble. Now that I’ve heard this Dharma, I won’t have any more sorrow and lamentation. The problems of my assembly are many, so I’m going to go back up to heaven. My own personal duties and the problems among the gods are all quite numerous.”</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.575c26'>時，須菩提言： 「今正是時。宜可時去。」 是時，釋提桓因即從＊坐起，前禮須菩提足，遶三匝，而去。</td>
