--- a/01_agama/ekottarika/14/EA_14_01.md
+++ b/01_agama/ekottarika/14/EA_14_01.md
@@ -19,11 +19,11 @@ next: EA_14_02.html
   </tr>
   <tr>
     <td class='ch' title='T125.2.576a15'>爾時，世尊告諸比丘： 「於是眾中，我不見一法修已、多修已，成地獄行，成畜生行，成餓鬼行。 若生人中，受命極短。 所謂殺生者也。</td>
-    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “I don’t see anything in this assembly like one thing<sup id="ref2"><a href="#n2">2</a></sup> that accomplishes the actions of Hell, actions of hungry ghosts, and actions of animals<sup id="ref3"><a href="#n3">3</a></sup> when cultivated and cultivated often. If they were born among humans, a person’s life will be made quite short by it. What is that one thing? It’s the killing of beings.”<sup id="ref4"><a href="#n4">4</a></sup></td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “I don’t see anything in this assembly like one thing<sup id="ref2"><a href="#n2">2</a></sup> that accomplishes the actions of hell, actions of hungry ghosts, and actions of animals<sup id="ref3"><a href="#n3">3</a></sup> when cultivated and cultivated often. If they were born among humans, a person’s life will be made quite short by it. What is that one thing? It’s the killing of beings.”<sup id="ref4"><a href="#n4">4</a></sup></td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.576a18'>「諸比丘，若有人意好殺生，便墮地獄、餓鬼、畜生。 若生人中，受命極短。 所以然者？ 以斷他命故。</td>
-    <td id='p3'>3. The Buddha told the monks,<sup id="ref5"><a href="#n5">5</a></sup> “If a person likes killing beings, then they’ll fall into Hell, among hungry ghosts, or among animals. If they are born among humans, their life will be made quite short by it. Why is that? Because they ended the lives of others.</td>
+    <td id='p3'>3. The Buddha told the monks,<sup id="ref5"><a href="#n5">5</a></sup> “If a person likes killing beings, then they’ll fall into hell, among hungry ghosts, or among animals. If they are born among humans, their life will be made quite short by it. Why is that? Because they ended the lives of others.</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.576a20'>「是故，當學莫殺生。 如是，諸比丘，當作是學。」</td>
@@ -41,8 +41,8 @@ next: EA_14_02.html
 
 <ol class="notes-list">
 <li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0576a14" target="_blank">T125.2.576a14-22</a>. I’m not aware of direct parallels for the <em>sūtra</em>s found in this chapter, but it is of interest that <a href="https://suttacentral.net/an1.312" target="_blank">AN 1.312-313</a> have the same template as these ten <em>sūtra</em>s. It would seem that it was a type of early <em>sūtra</em> reminescent of those who find in the <em>Itivuttaka</em> collections. Here in EĀ, the template has been applied to the five precepts. [<a href="#ref1">back</a>]</p></li>
-<li id="n2"><p><em>actions of Hell, actions of hungry ghosts, and actions of animals</em> C. 於是眾中，我不見一法. I’ve added “anything … like” so that this line makes better sense, as the C. translation doesn’t quite capture the intended meaning. Lit., the Taisho reads: “I don’t see in this assembly one thing,” which strictly speaking means there’s nothing that does what the rest of the paragraph says. But clearly something does: the thing named at the end. This situation is the same with the rest of the chapter, and I’ve translated accordingly. [<a href="#ref2">back</a>]</p></li>
-<li id="n3"><p><em>actions of Hell, actions of hungry ghosts, and actions of animals</em> C. 地獄行，成畜生行，成餓鬼行. I’ve changed the order of these three items to match the order found in the next paragraph as well as elsewhere in this chapter. The Taisho here lists them as Hell, animals, and hungry ghosts, which is likely a copyist error.</p>
+<li id="n2"><p><em>actions of hell, actions of hungry ghosts, and actions of animals</em> C. 於是眾中，我不見一法. I’ve added “anything … like” so that this line makes better sense, as the C. translation doesn’t quite capture the intended meaning. Lit., the Taisho reads: “I don’t see in this assembly one thing,” which strictly speaking means there’s nothing that does what the rest of the paragraph says. But clearly something does: the thing named at the end. This situation is the same with the rest of the chapter, and I’ve translated accordingly. [<a href="#ref2">back</a>]</p></li>
+<li id="n3"><p><em>actions of hell, actions of hungry ghosts, and actions of animals</em> C. 地獄行，成畜生行，成餓鬼行. I’ve changed the order of these three items to match the order found in the next paragraph as well as elsewhere in this chapter. The Taisho here lists them as hell, animals, and hungry ghosts, which is likely a copyist error.</p>
 <p>It should also be noted that 行 might translate S. <em>saṃskāra</em>, which would change the passage’s meaning to “the conditioned states of hell, hungry ghosts, and animals.” [<a href="#ref3">back</a>]</p></li>
 <li id="n4"><p><em>What is that one thing? It’s the killing of beings.</em> C. 所謂殺生者也. The Taisho often omits the question (“What is that one thing?”) that introduces the one thing that the Buddha is discussing, but it does occur in EĀ 14.5, 14.8, and 14.10. In the other <em>sūtra</em>s, there are alternate readings that include the question. I’ve adopted these alternate readings since it seems a typical case of copyist omission or lazy abbreviation. Uncorrected, the Taisho reading of EĀ 14.1-4, 6-7, and 9 all lack this question. [<a href="#ref4">back</a>]</p></li>
 <li id="n5"><p><em>The Buddha told the monks</em>. C. 諸比丘. The Taisho omits the Buddha addressing the monks in six out of ten of this chapter’s <em>sūtra</em>s, but those six all have alternate readings that include it. I’ve adopted those alternate readings. Uncorrected, the Taisho reading of EĀ 14.1, 3, and 7-10 would be: “Monks, if a person …” [<a href="#ref5">back</a>]</p></li>
