--- a/01_agama/ekottarika/14/EA_14_05.md
+++ b/01_agama/ekottarika/14/EA_14_05.md
@@ -19,11 +19,11 @@ next: EA_14_06.html
   </tr>
   <tr>
     <td class='ch' title='T125.2.576b21'>爾時世尊告諸比丘： 「於此眾中，不見一法修行已、多修行已，成地獄、餓鬼、畜生行。 若生人中，居家姦婬，無有淨行。 為人所譏，常被誹謗。 云何一法？ 所謂邪婬也。」</td>
-    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “I don’t see anything in this assembly like one thing that when cultivated and cultivated often accomplishes the actions of Hell, actions of hungry ghosts, and actions of animals. If they were born among humans, a person will be made to live in a household where adultery is practiced, that lacks pure living. People will gossip and constantly slander them. What is that one thing? It’s wrong sex.</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “I don’t see anything in this assembly like one thing that when cultivated and cultivated often accomplishes the actions of hell, actions of hungry ghosts, and actions of animals. If they were born among humans, a person will be made to live in a household where adultery is practiced, that lacks pure living. People will gossip and constantly slander them. What is that one thing? It’s wrong sex.</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.576b24'>佛告諸比丘： 「若有人婬泆無度，好犯他妻，便墮地獄、餓鬼、畜生中。 若生人中，閨門婬亂⋯</td>
-    <td id='p3'>3. The Buddha told the monks, “If a person is wanton without limit and likes violating others’ wives, they will readily fall into Hell, among hungry ghosts, or among animals. If they are born among humans, there will be debauchery in their household …</td>
+    <td id='p3'>3. The Buddha told the monks, “If a person is wanton without limit and likes violating others’ wives, they will readily fall into hell, among hungry ghosts, or among animals. If they are born among humans, there will be debauchery in their household …</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.576b27'>「是故，諸比丘，常當正意。 莫興婬想，愼莫他婬。 如是，諸比丘，當作是學。」</td>
