--- a/01_agama/ekottarika/14/EA_14_07.md
+++ b/01_agama/ekottarika/14/EA_14_07.md
@@ -19,11 +19,11 @@ next: EA_14_08.html
   </tr>
   <tr>
     <td class='ch' title='T125.2.576c10'>爾時，世尊告諸比丘： 「於此眾中，我不見一法修行已、多修行已，成地獄行、餓鬼、畜生行。 若生人中，口氣臭惡，為人所憎。 所謂妄語。</td>
-    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “I don’t see anything in this assembly like one thing that when cultivated and cultivated often accomplishes the actions of Hell, the actions of hungry ghosts, and the actions of animals. If they were born among humans, a person will have foul breath, and people will dislike them. What is that one thing? It’s false speech.</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “I don’t see anything in this assembly like one thing that when cultivated and cultivated often accomplishes the actions of hell, the actions of hungry ghosts, and the actions of animals. If they were born among humans, a person will have foul breath, and people will dislike them. What is that one thing? It’s false speech.</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.576c13'>「諸比丘，若有人妄言，綺語，鬪亂是非，便墮畜生、餓鬼中。 所以者何？ 以其妄語故也。</td>
-    <td id='p3'>3. The Buddha told the monks, “If a person speaks falsely, uses flattery, and instigates conflicts between one group and another, they will fall into Hell, among the hungry ghosts, or among animals.<sup id="ref2"><a href="#n2">2</a></sup> Why is that? It’s because they spoke falsely.</td>
+    <td id='p3'>3. The Buddha told the monks, “If a person speaks falsely, uses flattery, and instigates conflicts between one group and another, they will fall into hell, among the hungry ghosts, or among animals.<sup id="ref2"><a href="#n2">2</a></sup> Why is that? It’s because they spoke falsely.</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.576c15'>「是故，當至誠莫得妄語。 是故，諸比丘，當作是學。」</td>
@@ -41,7 +41,7 @@ next: EA_14_08.html
 
 <ol class="notes-list">
 <li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0576c09" target="_blank">T125.2.576c9-17</a>. [<a href="#ref1">back</a>]</p></li>
-<li id="n2"><p><em>instigates conflicts between one group and another, they will fall into Hell, among the hungry ghosts, and among animals</em>. C. 鬪亂是非，便墮畜生、餓鬼中。 I’ve adopted alternate readings that change this passage to “鬪亂<strong>彼此</strong>，便墮<strong>地獄</strong>、畜生、餓鬼中.” I’ve also corrected the order of the bad destinies in my translation to place animals last, which follows the pattern in this chapter. Uncorrected, the Taisho reads: “instigates conflicts, right or wrong, they will fall among animals and hungry ghosts.” [<a href="#ref2">back</a>]</p></li>
+<li id="n2"><p><em>instigates conflicts between one group and another, they will fall into hell, among the hungry ghosts, and among animals</em>. C. 鬪亂是非，便墮畜生、餓鬼中。 I’ve adopted alternate readings that change this passage to “鬪亂<strong>彼此</strong>，便墮<strong>地獄</strong>、畜生、餓鬼中.” I’ve also corrected the order of the bad destinies in my translation to place animals last, which follows the pattern in this chapter. Uncorrected, the Taisho reads: “instigates conflicts, right or wrong, they will fall among animals and hungry ghosts.” [<a href="#ref2">back</a>]</p></li>
 <li id="n3"><p><em>Therefore, monks, one should always … Thus, monks …</em>. C. 是故，當至誠莫得妄語。是故，諸比丘，當作是學. I’ve adopted alternate readings that correct obvious corruptions to this standard conclusion. The Taisho omits “monks” in the first sentence, and then changes “thus” to “therefore.” Uncorrected, the Taisho reads: “Therefore, you should be honest and not speak falsely.^Therefore, monks, you should train yourselves.” [<a href="#ref3">back</a>]</p></li>
 </ol>
 <hr/>
