--- a/01_agama/ekottarika/14/EA_14_09.md
+++ b/01_agama/ekottarika/14/EA_14_09.md
@@ -19,7 +19,7 @@ next: EA_14_10.html
   </tr>
   <tr>
     <td class='ch' title='T125.2.576c26'>爾時，世尊告諸比丘： 「於此眾中，我不見一法修行已、多修行已，受畜生、餓鬼、地獄罪。 若生人中，狂愚、癡惑，不識真僞。 所謂飮酒也。</td>
-    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “I don’t see anything in this assembly like one thing that when cultivated and cultivated often accomplishes the misdeeds of animals, hungry ghosts, and Hell.<sup id="ref2"><a href="#n2">2</a></sup> If they were born among humans, a person will be made mentally ill, deluded, and unaware of what’s true or false. What is that one thing? It’s drinking alcohol.</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “I don’t see anything in this assembly like one thing that when cultivated and cultivated often accomplishes the misdeeds of animals, hungry ghosts, and hell.<sup id="ref2"><a href="#n2">2</a></sup> If they were born among humans, a person will be made mentally ill, deluded, and unaware of what’s true or false. What is that one thing? It’s drinking alcohol.</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.576c29'>「諸比丘，若有人心好飮酒，所生之處無有智慧，常懷愚癡⋯</td>
@@ -41,7 +41,7 @@ next: EA_14_10.html
 
 <ol class="notes-list">
 <li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0576c25" target="_blank">T125.2.576c25-7a3</a>. [<a href="#ref1">back</a>]</p></li>
-<li id="n2"><p><em>misdeeds of animals, hungry ghosts, and Hell</em>. C. 畜生、餓鬼、地獄罪. Here, this phrase is in reverse order compared to how it occurs in the other <em>sūtra</em>s of this chapter. It’s also more specific about the actions involved being misdeeds. There’s no alternate reading to indicate that this was a later change, so I’ve left it as-is. In the other <em>sūtra</em>s, the same phrase reads: “actions of Hell, hungry ghosts, and animals.” [<a href="#ref2">back</a>]</p></li>
+<li id="n2"><p><em>misdeeds of animals, hungry ghosts, and hell</em>. C. 畜生、餓鬼、地獄罪. Here, this phrase is in reverse order compared to how it occurs in the other <em>sūtra</em>s of this chapter. It’s also more specific about the actions involved being misdeeds. There’s no alternate reading to indicate that this was a later change, so I’ve left it as-is. In the other <em>sūtra</em>s, the same phrase reads: “actions of hell, hungry ghosts, and animals.” [<a href="#ref2">back</a>]</p></li>
 <li id="n3"><p><em>Therefore, monks</em>. C. 如是，諸比丘⋯. Here, I’ve adopted an alternate reading that corrects “thus” to “therefore” to match the usual conclusion. [<a href="#ref3">back</a>]</p></li>
 </ol>
 <hr/>
