--- a/01_agama/ekottarika/14/EA_14_10.md
+++ b/01_agama/ekottarika/14/EA_14_10.md
@@ -45,9 +45,9 @@ next: ../15/EA_15_01.html
     令知次第數。</li>
   </ul></td>
   <td><ul class='verse'>
-    <li>Five <em>sūtra</em>s about Hell,<br/>
+    <li>Five <em>sūtra</em>s about hell,<br/>
     Named for unskillful practices,<br/>
-    And five on Heaven and humans<br/>
+    And five on heaven and humans<br/>
     Made know in their order.</li>
   </ul></td>
 </tr>
