--- a/01_agama/ekottarika/16/EA_16_05.md
+++ b/01_agama/ekottarika/16/EA_16_05.md
@@ -31,7 +31,7 @@ next: EA_16_06.html
   </tr>
   <tr>
     <td class='ch' title='t125.2.580a26'>「如是，比丘，行此惡已，墮畜生、餓鬼、地獄中。 設行善者，便生人中、天上，及諸善趣阿須倫中。 是故，當遠離惡行，修習善行。 如是，諸比丘，當作是學。」</td>
-    <td id='p4'>4. “Thus, monks, someone who has practiced these evils falls to an animal birth, to the hungry ghosts, or into Hell. Someone who practices these virtues is born among humans, up in heaven, or among the <em>asura</em>s of a good destiny. Therefore, monks, you must stay away from evil conduct and cultivate good conduct. Thus, monks, you should train yourselves.”</td>
+    <td id='p4'>4. “Thus, monks, someone who has practiced these evils falls to an animal birth, to the hungry ghosts, or into hell. Someone who practices these virtues is born among humans, up in heaven, or among the <em>asura</em>s of a good destiny. Therefore, monks, you must stay away from evil conduct and cultivate good conduct. Thus, monks, you should train yourselves.”</td>
   </tr>
   <tr>
     <td class='ch' title='t125.2.580b1'>爾時，諸比丘聞佛所說歡喜，奉行。</td>
