--- a/01_agama/madhyama/MA_002.md
+++ b/01_agama/madhyama/MA_002.md
@@ -165,7 +165,7 @@ next: MA_003.html
 <li id="n11"><p><em>fourth meditation.</em> C. <span class="ch">聖弟子樂滅，苦滅。喜、憂本已滅，不苦、不樂。捨、念、清淨，得第四禪成就遊</span>, P. <em>Sukhassa ca pahānā dukkhassa ca pahānā pubbeva somanassadomanassānaṁ atthaṅgamā adukkhamasukhaṁ upekkhāsatipārisuddhiṁ catutthaṁ jhānaṁ upasampajja viharati.</em>, S. <em>sa tatprārthayamānas taddhetos tatsaṃvartanīyaṃ sukhasya ca prahāṇād duḥkhasya ca prahāṇāt pūrvam eva ca saumanasyadaurmanasyayor astagamād aduḥkhāsukhaṃ upekṣāsmṛtipariśuddhaṃ caturthaṃ dhyānam upasaṃpadya viharati</em>. This fourth stage of meditation is the point at which the meditator has achieved an undisturbed <em>samādhi</em> after having dispensed with the joy and happiness that the initial entry had created. Detached from those positive reactions to it, they achieve a stable and clear <em>samādhi</em>.</p>
 <p>The descriptions of this fourth meditation are the same across different sources, setting aside the usual translation issues, so here I will cover mainly the <em>Dharmaskandha</em> commentary, turning to T1547 only where it adds more information.</p>
 <p><em>the noble disciple’s pleasure ceases and their pain ceases.</em> C. <span class="ch">聖弟子樂滅，苦滅</span>, P. <em>sukhassa ca pahānā dukkhassa ca pahānā</em>, S. <em>sukhasya ca prahāṇād duḥkhasya ca prahāṇāt</em>. The <em>Dharmaskandha</em> defines pleasure (<span class="ch">樂</span>) as physical and mental pleasure that arises from pleasant contact as well as the happiness experienced in the third meditation. It defines pain (<span class="ch">苦</span>) here as physical pain that arises from painful contact. This pleasure and pain are fully known to have ended. Both are far away, subdued, subsided, and disappeared.</p>
-<p>In T1547, the question is raised as to how there could be painful feelings after the bonds of the desire realm and the happiness of the third stage of meditation are gone. The answer given is that pain had already ceased prior to entering the fourth meditation. What the description is saying here is that the meditator becomes aware that they have achieved a cessation of both pleasure and pain, but they did not both cease at the same time. Other explanations are also cited. One is that the meditator realizes that the final end of pleasure and pain will happen in the future. Another explanation is that the happiness of the third meditation is painful in the sense that it is impermanent. A <em>sūtra</em> is quoted in which the Buddha tells the monks that pleasant feelings should be regarded as thorns and neutral feelings as poisonous snakes. Another <em>sūtra</em> passage is cited saying that breathing in and out is considered to be the most painful thing by a noble person, rather than pains of Hell that are considered the worst by ordinary people. This last point no doubt alludes to the cessation of breathing that’s often associated with the fourth meditation. We can see from this discussion in T1547 that this part of the description was understood in a variety of ways.</p>
+<p>In T1547, the question is raised as to how there could be painful feelings after the bonds of the desire realm and the happiness of the third stage of meditation are gone. The answer given is that pain had already ceased prior to entering the fourth meditation. What the description is saying here is that the meditator becomes aware that they have achieved a cessation of both pleasure and pain, but they did not both cease at the same time. Other explanations are also cited. One is that the meditator realizes that the final end of pleasure and pain will happen in the future. Another explanation is that the happiness of the third meditation is painful in the sense that it is impermanent. A <em>sūtra</em> is quoted in which the Buddha tells the monks that pleasant feelings should be regarded as thorns and neutral feelings as poisonous snakes. Another <em>sūtra</em> passage is cited saying that breathing in and out is considered to be the most painful thing by a noble person, rather than pains of hell that are considered the worst by ordinary people. This last point no doubt alludes to the cessation of breathing that’s often associated with the fourth meditation. We can see from this discussion in T1547 that this part of the description was understood in a variety of ways.</p>
 <p><em>their past joy and sorrow having ceased, they feel neither pain nor pleasure.</em> C. <span class="ch">喜、憂本已滅，不苦、不樂</span>, P. <em>pubbeva somanassadomanassānaṁ atthaṅgamā adukkhamasukhaṁ</em>, S. <em>pūrvam eva ca saumanasyadaurmanasyayor astagamād aduḥkhāsukhaṃ</em>. The <em>Dharmaskandha</em> commentary simply defines joy and sorrow as mental feelings that arise from joyful or sorrowful contact. These two things have previously subsided. The commentator then says that sorrow was ended upon entering the first meditation, pain ended upon entering the second meditation, and joy ended upon entering the third meditation. Now, upon entering the fourth meditation, pleasure, pain, joy, and sorrow have all ended. This agrees with the point made earlier in T1547. The <em>Dharmaskandha</em> commentary concludes by saying that painful and pleasant feelings have ended, leaving only neutral feelings in the fourth meditation. The commentary on this passage in T1547 specifies that it was the removal of desire realm desires that ended sorrow, and the removal of second meditation desires that ended joy.</p>
 <p><em>with the purification of their equanimity and mindfulness, they accomplish and dwell in the fourth meditation.</em> C. <span class="ch">捨、念、清淨，得第四禪成就遊</span>, P. <em>upekkhāsatipārisuddhiṁ catutthaṁ jhānaṁ upasampajja viharati</em>, S. <em>upekṣāsmṛtipariśuddhaṃ caturthaṃ dhyānam upasaṃpadya viharati</em>. The <em>Dharmaskandha</em> commentary defines equanimity (<span class="ch">捨</span>) and mindfulness (<span class="ch">念</span>) in the same way as was done in the third meditation. It then states that purification (<span class="ch">清淨</span>) here refers to the purification of the meditator’s equanimity and mindfulness as a result of stopping pleasure, pain, joy, sorrow, seeking, and investigation.</p>
 <p>The commentary in T1547 says that equanimity refers to the meditator having stopped breathing and not desiring to pursue any more thoughts. It then says that purification of mindfulness refers to the purity of their mindfulness of eight subjects. These eight subjects aren’t stated there, but the same expression is used to refer to the eight liberations in a later chapter of T1547.</p>
