--- a/01_agama/madhyama/MA_011.md
+++ b/01_agama/madhyama/MA_011.md
@@ -19,7 +19,7 @@ next: MA_012.html
 
 #### The Parable of the Salt Rocks
 
-3\. “Why is that? Suppose someone performs a deed that’s not good and will surely receive a painful result, the reward of Hell. How does a person perform a deed that’s not good and will surely receive a painful result, the reward of Hell? It means that this person hasn’t cultivated themselves. They haven’t cultivated the precepts, haven’t cultivated their mind, and haven’t cultivated wisdom. Their life span will be very short. This is called a person who performs a deed that’s not good and will surely receive a painful result, the reward of Hell.
+3\. “Why is that? Suppose someone performs a deed that’s not good and will surely receive a painful result, the reward of hell. How does a person perform a deed that’s not good and will surely receive a painful result, the reward of hell? It means that this person hasn’t cultivated themselves. They haven’t cultivated the precepts, haven’t cultivated their mind, and haven’t cultivated wisdom. Their life span will be very short. This is called a person who performs a deed that’s not good and will surely receive a painful result, the reward of hell.
 {:#p3}
 
 4\. “It’s like a person who tosses a couple salt rocks into a little water wanting to make the water too salty to drink. What do you think? Can those salt rocks make the water too salty to drink?”
@@ -28,7 +28,7 @@ next: MA_012.html
 5\. The monks answered, “Yes, Bhagavān. Why is that? Those salt rocks are larger, and the water is smaller, so they can make the water too salty to drink.”
 {:#p5}
 
-6\. “So it is with someone who performs a deed that’s not good and will surely receive a painful result, the reward of Hell. How does a person perform a deed that’s not good and will surely receive a painful result, the reward of Hell? It means that this person hasn’t cultivated themselves. They haven’t cultivated the precepts, haven’t cultivated their mind, and haven’t cultivated wisdom. Their life span will be very short. This is called a person who performs a deed that’s not good and will surely receive a painful result, the reward of Hell.
+6\. “So it is with someone who performs a deed that’s not good and will surely receive a painful result, the reward of hell. How does a person perform a deed that’s not good and will surely receive a painful result, the reward of hell? It means that this person hasn’t cultivated themselves. They haven’t cultivated the precepts, haven’t cultivated their mind, and haven’t cultivated wisdom. Their life span will be very short. This is called a person who performs a deed that’s not good and will surely receive a painful result, the reward of hell.
 {:#p6}
 
 7\. “Furthermore, someone performs a deed that’s not good and will surely receive a painful result, a reward in the present life. How does a person perform a deed that’s not good and will surely receive a painful result, a reward in the present life? It means that this person has cultivated themselves. They have cultivated the precepts, cultivated their mind, and cultivated wisdom. Their life span will be very long. This is called a person who performs a deed that’s not good and will surely receive a painful result, a reward in the present life.
@@ -45,13 +45,13 @@ next: MA_012.html
 
 #### The Parable of the Sheep Thief
 
-11\. “Furthermore, someone performs a deed that’s not good and will surely receive a painful result, the reward of Hell. How does a person perform a deed that’s not good and will surely receive a painful result, the reward of Hell? It means that this person hasn’t cultivated themselves. They haven’t cultivated the precepts, haven’t cultivated their mind, and haven’t cultivated wisdom. Their life span will be very short. This is called a person who performs a deed that’s not good and will surely receive a painful result, the reward of Hell.
+11\. “Furthermore, someone performs a deed that’s not good and will surely receive a painful result, the reward of hell. How does a person perform a deed that’s not good and will surely receive a painful result, the reward of hell? It means that this person hasn’t cultivated themselves. They haven’t cultivated the precepts, haven’t cultivated their mind, and haven’t cultivated wisdom. Their life span will be very short. This is called a person who performs a deed that’s not good and will surely receive a painful result, the reward of hell.
 {:#p11}
 
 12\. “It’s like a person who steals someone else’s sheep. How does a person steal someone else’s sheep? It means that the sheep thief is a king or a king’s official who’s powerful, and the sheep owner is poor and powerless. Because they’re powerless, the owner looks hopeful in various ways, imploring them with their palms together and saying, ‘Good man, could you let the sheep return or given them back directly?’ This is what’s meant by a person who steals someone else’s sheep.
 {:#p12}
 
-13\. “Thus is someone who performs a deed that’s not good and will surely receive a painful result, the reward of Hell. How does a person perform a deed that’s not good and will surely receive a painful result, the reward of Hell? It means that this person hasn’t cultivated themselves. They haven’t cultivated the precepts, haven’t cultivated their mind, and haven’t cultivated wisdom. Their life span will be very short. This is called a person who performs a deed that’s not good and will surely receive a painful result, the reward of Hell.
+13\. “Thus is someone who performs a deed that’s not good and will surely receive a painful result, the reward of hell. How does a person perform a deed that’s not good and will surely receive a painful result, the reward of hell? It means that this person hasn’t cultivated themselves. They haven’t cultivated the precepts, haven’t cultivated their mind, and haven’t cultivated wisdom. Their life span will be very short. This is called a person who performs a deed that’s not good and will surely receive a painful result, the reward of hell.
 {:#p13}
 
 14\. “Furthermore, someone performs a deed that’s not good and will surely receive a painful result, a reward in the present life. How does a person perform a deed that’s not good and will surely receive a painful result, a reward in the present life? It means that this person has cultivated themselves. They have cultivated the precepts, cultivated their mind, and cultivated wisdom. Their life span will be very long. This is called a person who performs a deed that’s not good and will surely receive a painful result, a reward in the present life.
@@ -65,13 +65,13 @@ next: MA_012.html
 
 #### The Parable of the Debtor
 
-17\. “Furthermore, someone performs a deed that’s not good and surely will receive a painful result, the reward of Hell. How does a person perform a deed that’s not good and will surely receive a painful result, the reward of Hell? It means that this person hasn’t cultivated themselves. They haven’t cultivated the precepts, haven’t cultivated their mind, and haven’t cultivated wisdom. Their life span will be very short. This is called a person who performs a deed that’s not good and will surely receive a painful result, the reward of Hell.
+17\. “Furthermore, someone performs a deed that’s not good and surely will receive a painful result, the reward of hell. How does a person perform a deed that’s not good and will surely receive a painful result, the reward of hell? It means that this person hasn’t cultivated themselves. They haven’t cultivated the precepts, haven’t cultivated their mind, and haven’t cultivated wisdom. Their life span will be very short. This is called a person who performs a deed that’s not good and will surely receive a painful result, the reward of hell.
 {:#p17}
 
 18\. “It’s like a person who owes five coins to someone else, and they’re arrested by that creditor. Even if it were just one coin, they would be arrested by that creditor. How is it that a person who owes five coins to someone else is arrested by that creditor, and they would be arrested by that creditor even if it were just one coin? It means this debtor is poor and powerless. Because they’re poor and powerless, someone who owes five coins is arrested by their creditor. Even if it were just one coin, they would be arrested by that creditor. This is what’s meant by a person who owes five coins to someone else and is arrested by that creditor. Even if it were just one coin, they would be arrested by that creditor.
 {:#p18}
 
-19\. “Thus is someone who performs a deed that’s not good and will surely receive a painful result, the reward of Hell. How does a person perform a deed that’s not good and will surely receive a painful result, the reward of Hell? It means that this person hasn’t cultivated themselves. They haven’t cultivated the precepts, haven’t cultivated their mind, and haven’t cultivated wisdom. Their life span will be very short. This is called a person who performs a deed that’s not good and will surely receive a painful result, the reward of Hell.
+19\. “Thus is someone who performs a deed that’s not good and will surely receive a painful result, the reward of hell. How does a person perform a deed that’s not good and will surely receive a painful result, the reward of hell? It means that this person hasn’t cultivated themselves. They haven’t cultivated the precepts, haven’t cultivated their mind, and haven’t cultivated wisdom. Their life span will be very short. This is called a person who performs a deed that’s not good and will surely receive a painful result, the reward of hell.
 {:#p19}
 
 20\. “Furthermore, someone performs a deed that’s not good and will surely receive a painful result, a reward in the present life. How does a person perform a deed that’s not good and will surely receive a painful result, a reward in the present life? It means that this person has cultivated themselves. They have cultivated the precepts, cultivated their mind, and cultivated wisdom. Their life span will be very long. This is called a person who performs a deed that’s not good and will surely receive a painful result, a reward in the present life.
