--- a/01_agama/madhyama/MA_072.md
+++ b/01_agama/madhyama/MA_072.md
@@ -118,7 +118,7 @@ This is a law that’s venerable.
 32\. “As a result of this, Dīrghāyu the scholar’s wife was able to see the fourfold army arrayed in formation with their armor and shields, draw their autumn swords, and be directed to march serenely. That shining army was so dignified. She also was able to drink water from the sharpening of their blades. After drinking the blade-sharpening water, her sadness was dispelled. She gave birth to a virtuous son, and they named him Prince Dīrghajāti. They entrusted him to someone to be raised in secret.
 {: #p32}
 
-33\. “After he grew up, if he had been among the warrior kings born from the crown, Prince Dīrghajāti would have governed the world under Heaven and obtained a great empire. His various skills included elephant riding, horseback riding, driving, galloping, archery, boxing, net throwing, hook throwing, chariot riding, and sitting in a palanquin. Such various and marvelous skills were all known to him. Whatever subject it was, his wondrous understanding of it was extraordinary. He determined to surpass the world, and his intelligence was outstanding, subtle, and profound. There wasn’t anything he couldn’t comprehend.
+33\. “After he grew up, if he had been among the warrior kings born from the crown, Prince Dīrghajāti would have governed the world under heaven and obtained a great empire. His various skills included elephant riding, horseback riding, driving, galloping, archery, boxing, net throwing, hook throwing, chariot riding, and sitting in a palanquin. Such various and marvelous skills were all known to him. Whatever subject it was, his wondrous understanding of it was extraordinary. He determined to surpass the world, and his intelligence was outstanding, subtle, and profound. There wasn’t anything he couldn’t comprehend.
 {: #p33}
 
 34\. “Brahmadatta then heard that Dīrghāyu, the king of Kośala, had become a scholar, changed his name, and was living in Bārāṇasī. Brahmadatta ordered everyone to his left and right, ‘Quickly, all of you, go and collect King Dīrghāyu. Bind both his hands and make him run while beating a broken drum that sounds like a donkey braying. After you’ve gone everywhere in the city, take him outside the city’s south gate and make him sit under a tall sign that questions his abdication.’
