--- a/01_agama/madhyama/MA_137.md
+++ b/01_agama/madhyama/MA_137.md
@@ -118,7 +118,7 @@ next: MA_139.html
     They themselves have realized insight.<br/>
     Without me, they would’ve missed their chance.<br/>
     Those who missed it are aggrieved,<br/>
-    When they fall down into Hell.”</li>
+    When they fall down into hell.”</li>
   </ul></td>
 </tr>
   <tr>
