--- a/01_agama/dirgha/DA_26.md
+++ b/01_agama/dirgha/DA_26.md
@@ -28,65 +28,65 @@ next: DA_27.html
 6\. He had a disciple named Bhāradvāja who was descended from seven generations of fathers and mothers who were genuine [priests], so he wasn’t slighted by others. He had mastered the three Vedas and could discern all the various kinds of scriptures. He was also skilled in the techniques of [recognizing] the great man’s signs, divining fortune and misfortune, and [performing] sacrifices and rituals. He also had 500 disciples whom he taught without exception.
 {:#p6}
 
-7\. These two men, Vasiṣṭha and Bhāradvāja went to a park in the early morning. When they discussed doctrines, they contradicted one another. Vasiṣṭha said to Bhāradvāja, “My path is true. It can attain escape and arrive in Brahmā’s Heaven. This is the teaching of the priest Puṣkarasārin.”
-Bhāradvāja also said, “My path is true. It can attain escape and arrive in Brahmā’s Heaven. This is the teaching of the priest [Tārukkha].”
+7\. These two men, Vasiṣṭha and Bhāradvāja went to a park in the early morning. When they discussed doctrines, they contradicted one another. Vasiṣṭha said to Bhāradvāja, “My path is true. It can attain escape and arrive in Brahmā’s heaven. This is the teaching of the priest Puṣkarasārin.”
+Bhāradvāja also said, “My path is true. It can attain escape and arrive in Brahmā’s heaven. This is the teaching of the priest [Tārukkha].”
 Vasiṣṭha thus praised his own path as true three times, and Bhāradvāja also praised his own path as true three times. They continued their discussion, but neither was able to be decisive.
 {:#p7}
 
 8\. Vasiṣṭha then said to Bhāradvāja, “I heard that the ascetic Gautama of the Śākya clan, who had left the home life and achieved awakening, was travelling among the people of Kośala and now is staying in the grove at Icchānaṅgala. He possesses a great reputation that’s heard throughout the world: ‘He’s a Tathāgata, an Arhat, and a Completely Awakened One who has perfected the ten epithets. Among gods, worldly men, and demons, whether they’re in the assemblies of Māra and gods or ascetics and priests, he is self-realized and teaches the Dharma for others. It’s good in the beginning, middle, and end, complete in content and expression, and purifies the religious life.’
 {:#p8}
 
-9\. “Since he’s a realized person, we should go and meet him! I’ve heard that Gautama knows the way to Brahmā’s Heaven and teaches it for others. He frequently visits Brahmā’s Heaven to speak with him. We should go together to visit Gautama. He’ll settle this matter. If the ascetic Gautama has something to tell us, we should uphold it together, too.”
+9\. “Since he’s a realized person, we should go and meet him! I’ve heard that Gautama knows the way to Brahmā’s heaven and teaches it for others. He frequently visits Brahmā’s heaven to speak with him. We should go together to visit Gautama. He’ll settle this matter. If the ascetic Gautama has something to tell us, we should uphold it together, too.”
 {:#p9}
 
 10\. Vasiṣṭha and Bhāradvāja both went to the citron grove to visit the Bhagavān. After exchanging greetings, they sat to one side.
 {:#p10}
 
-11\. Knowing the thoughts in their minds, the Bhagavān then told Vasiṣṭha, “Both of you went to a grove in the early morning. When you had a discussion, you contradicted each other. One of you said, ‘My path is true. It can attain escape and arrive in Brahmā’s Heaven. This is the teaching of the priest Puṣkarasārin.’
+11\. Knowing the thoughts in their minds, the Bhagavān then told Vasiṣṭha, “Both of you went to a grove in the early morning. When you had a discussion, you contradicted each other. One of you said, ‘My path is true. It can attain escape and arrive in Brahmā’s heaven. This is the teaching of the priest Puṣkarasārin.’
 {:#p11}
 
-“The other said, ‘My path is true. It can attain escape and arrive in Brahmā’s Heaven. This is the teaching of the priest [Tārukkha].’
+“The other said, ‘My path is true. It can attain escape and arrive in Brahmā’s heaven. This is the teaching of the priest [Tārukkha].’
 
 “Thus, you contradicted each other three times. Is that what happened?”
 
 12\. Vasiṣṭha and Bhāradvāja were shocked when they heard the Buddha say this, and their hair stood up. They thought, “The ascetic Gautama possesses great miraculous virtue. He knows a person’s thoughts beforehand. The ascetic Gautama was the first to mention what we came wanting to discuss!”
 {:#p12}
 
-13\. Vasiṣṭha said to the Buddha, “My path and his path are both praised as true, achieving the escape and arriving at Brahmā’s Heaven. Is what’s taught by the priest Puṣkarasārin correct, or is it what’s taught by the priest [Tārukkha] that’s correct?”
+13\. Vasiṣṭha said to the Buddha, “My path and his path are both praised as true, achieving the escape and arriving at Brahmā’s heaven. Is what’s taught by the priest Puṣkarasārin correct, or is it what’s taught by the priest [Tārukkha] that’s correct?”
 {:#p13}
 
-14\. The Buddha said, “Vasiṣṭha, even if it were this path or that path which is truly the escape and arrives at Brahmā’s Heaven, why did you contradict each other three times while you were in a grove this morning?”
+14\. The Buddha said, “Vasiṣṭha, even if it were this path or that path which is truly the escape and arrives at Brahmā’s heaven, why did you contradict each other three times while you were in a grove this morning?”
 {:#p14}
 
-15\. Vasiṣṭha then said to the Buddha, “The priests possessing the three Vedas[\[3\]](#n3){:#ref3} teach various paths, such as the path of free desires, the self-realized path, and the path to Brahmā’s Heaven. All three paths lead to Brahmā’s heaven. Gautama, it’s like a village that has many roads that lead to its citadel. Although the priests teach various paths, they all lead to Brahmā’s Heaven.”
+15\. Vasiṣṭha then said to the Buddha, “The priests possessing the three Vedas[\[3\]](#n3){:#ref3} teach various paths, such as the path of free desires, the self-realized path, and the path to Brahmā’s heaven. All three paths lead to Brahmā’s heaven. Gautama, it’s like a village that has many roads that lead to its citadel. Although the priests teach various paths, they all lead to Brahmā’s heaven.”
 {:#p15}
 
-16\. The Buddha asked Vasiṣṭha, “Do all of those paths arrive at Brahmā’s Heaven?”
+16\. The Buddha asked Vasiṣṭha, “Do all of those paths arrive at Brahmā’s heaven?”
 {:#p16}
 
 He replied, “All of them arrive there.”
 
-17\. The Buddha asked him three times, “Do those various paths all arrive at Brahmā’s Heaven?”
+17\. The Buddha asked him three times, “Do those various paths all arrive at Brahmā’s heaven?”
 {:#p17}
 
 He replied, “They all arrive there.”
 
-18\. After being certain of what he was saying, the Bhagavān asked Vasiṣṭha, “Is there anyone among those priests who possess the three Vedas who have seen Brahmā’s Heaven?”
+18\. After being certain of what he was saying, the Bhagavān asked Vasiṣṭha, “Is there anyone among those priests who possess the three Vedas who have seen Brahmā’s heaven?”
 {:#p18}
 
 He replied, “None of them have seen it.”
 
-19\. “How is it, Vasiṣṭha? Did any previous teacher of those priests who possess the three Vedas see Brahmā’s Heaven?”
+19\. “How is it, Vasiṣṭha? Did any previous teacher of those priests who possess the three Vedas see Brahmā’s heaven?”
 {:#p19}
 
 He replied, “None of them saw it.”
 
-20\. “How is it, Vasiṣṭha? Going back to the priests of antiquity, there were sages who possessed the three insights who recited and mastered [the Vedas], taught the recitations for others, and chanted the hymns. Their names were the priests Aṣṭaka, [Vāmaka], Vāmadeva, Viśvāmitra, Aṅgiras, [Yamataggi], Vasiṣṭha, Kāśyapa, Aruṇa, Gautama, [Suyiva], and Sundara.[\[4\]](#n4){:#ref4} Did any of them see Brahmā’s Heaven?”
+20\. “How is it, Vasiṣṭha? Going back to the priests of antiquity, there were sages who possessed the three insights who recited and mastered [the Vedas], taught the recitations for others, and chanted the hymns. Their names were the priests Aṣṭaka, [Vāmaka], Vāmadeva, Viśvāmitra, Aṅgiras, [Yamataggi], Vasiṣṭha, Kāśyapa, Aruṇa, Gautama, [Suyiva], and Sundara.[\[4\]](#n4){:#ref4} Did any of them see Brahmā’s heaven?”
 {:#p20}
 
 He answered, “None of them saw it.”
 
-21\. The Buddha said, “If not one of the priests who possess the three insights have seen Brahmā’s Heaven, none of the previous teachers of the priests who possess the three Vedas have seen Brahmā’s Heaven, and even the great sages of antiquity like the priest Aṣṭaka didn’t see Brahmā’s Heaven, we should know that the teachings of the priests who possess the three Vedas are untrue.”
+21\. The Buddha said, “If not one of the priests who possess the three insights have seen Brahmā’s heaven, none of the previous teachers of the priests who possess the three Vedas have seen Brahmā’s heaven, and even the great sages of antiquity like the priest Aṣṭaka didn’t see Brahmā’s heaven, we should know that the teachings of the priests who possess the three Vedas are untrue.”
 {:#p21}
 
 22\. He also told Vāsiṣṭha, “It’s like a lustful man who says, ‘I have a relationship with that beautiful woman. Praise the way of lust!’
@@ -149,7 +149,7 @@ He replied, “Yes, it’s actually done in vain.”
 34\. The Buddha said, “The priests who possess the three Vedas are likewise. They are deceptive and untrue.
 {:#p34}
 
-35\. “Vāsiṣṭha, the five desires are pure and extremely delightful. What are the five? Images seen by the eye are extremely delightful … ear … sounds … nose … odors … tongue … flavors … body … touches … are extremely delightful. In my noble teaching, they are attachments, fetters, and binding chains. Those priests who possess the three Vedas are defiled by these five desires, and their addiction to them is strong. They don’t see their drawback and don’t know their escape, so they are bound by these five desires. Even if they worshipped the sun and moon or water and fire and declared, ‘Support my rebirth in Brahmā’s Heaven!’ it would be impossible.
+35\. “Vāsiṣṭha, the five desires are pure and extremely delightful. What are the five? Images seen by the eye are extremely delightful … ear … sounds … nose … odors … tongue … flavors … body … touches … are extremely delightful. In my noble teaching, they are attachments, fetters, and binding chains. Those priests who possess the three Vedas are defiled by these five desires, and their addiction to them is strong. They don’t see their drawback and don’t know their escape, so they are bound by these five desires. Even if they worshipped the sun and moon or water and fire and declared, ‘Support my rebirth in Brahmā’s heaven!’ it would be impossible.
 {:#p35}
 
 36\. “It’s like the Ajiravatī River when its current is as high as its banks and a crow could drink from it. Suppose a person on the near shore who’s been tightly bound called in vain to the other shore, ‘Cross over to me!’ Would the other shore cross over to this person?”
@@ -157,7 +157,7 @@ He replied, “Yes, it’s actually done in vain.”
 
 He replied, “No.”
 
-37\. “Vāsiṣṭha, the five desires are pure and extremely delightful, but they are still binding chains in my noble teaching. Those priests who possess the three Vedas are defiled by these five desires, and their addiction to them is strong. They don’t see their drawback and don’t know their escape, so they are bound by these five desires. Even if they worshipped the sun and moon or water and fire and declared, ‘Support my rebirth in Brahmā’s Heaven!’ it would likewise never be possible.
+37\. “Vāsiṣṭha, the five desires are pure and extremely delightful, but they are still binding chains in my noble teaching. Those priests who possess the three Vedas are defiled by these five desires, and their addiction to them is strong. They don’t see their drawback and don’t know their escape, so they are bound by these five desires. Even if they worshipped the sun and moon or water and fire and declared, ‘Support my rebirth in Brahmā’s heaven!’ it would likewise never be possible.
 {:#p37}
 
 38\. “Vāsiṣṭha, it’s like the Ajiravatī River when its current is as high as its banks and a crow could drink from it. Could someone without a boat or the strength to swim cross it if they wanted?”
@@ -165,13 +165,13 @@ He replied, “No.”
 
 He answered, “They couldn’t.”
 
-39\. “Vāsiṣṭha, the priests who possess the three Vedas are likewise. They don’t cultivate the ascetic’s pure religious life, instead cultivating other paths that are impure practices. Their goal of being born in Brahmā’s Heaven isn’t possible.
+39\. “Vāsiṣṭha, the priests who possess the three Vedas are likewise. They don’t cultivate the ascetic’s pure religious life, instead cultivating other paths that are impure practices. Their goal of being born in Brahmā’s heaven isn’t possible.
 {:#p39}
 
 40\. “Vāsiṣṭha, it’s like many people caught in a flash flood in the mountains without boats or a bridge. A traveler comes upon it and wants to cross over to the other shore. Seeing the mountain river’s torrent and the people floating in it, they realize they also lack a boat or bridge. That person thinks, ‘Now, I’d better collect many reeds and branches and bind them into a raft. Perhaps I could then cross to the other shore using my own power?’ They then bind a raft and use their own power to cross over to safety.
 {:#p40}
 
-41\. “Vāsiṣṭha, this is likewise. If a monk abandons the impure practices of non-ascetics and practices the ascetic’s pure religious practice, then his desire to be born in Brahmā’s Heaven is possible. How is it, Vāsiṣṭha? Does Brahmā have resentment, or does he not?”
+41\. “Vāsiṣṭha, this is likewise. If a monk abandons the impure practices of non-ascetics and practices the ascetic’s pure religious practice, then his desire to be born in Brahmā’s heaven is possible. How is it, Vāsiṣṭha? Does Brahmā have resentment, or does he not?”
 {:#p41}
 
 He answered, “He doesn’t have resentment.”
@@ -309,7 +309,7 @@ He answered, “He does.”
 70\. The Buddha said, “Brahmā attains sovereignty, and a monk practicing kindness attains sovereignty. They’re equal in attaining sovereignty. They’re both free and headed in the same way Therefore, Brahmā and the monk are equals.”
 {:#p70}
 
-71\. The Buddha told Vāsiṣṭha, “You should know that when such a monk’s body breaks up and his life ends, he’s born up in Brahmā’s Heaven in an instant like shooting an arrow.” When the Buddha taught this Dharma, Vāsiṣṭha and Bhāradvāja had their defilements and dust removed right where they were sitting, and the Dharma eye arose in them.
+71\. The Buddha told Vāsiṣṭha, “You should know that when such a monk’s body breaks up and his life ends, he’s born up in Brahmā’s heaven in an instant like shooting an arrow.” When the Buddha taught this Dharma, Vāsiṣṭha and Bhāradvāja had their defilements and dust removed right where they were sitting, and the Dharma eye arose in them.
 {:#p71}
 
 72\. When Vāsiṣṭha and Bhāradvāja heard what the Buddha taught, they rejoiced and approved.
