--- a/01_agama/ekottarika/01/EA_01_01.md
+++ b/01_agama/ekottarika/01/EA_01_01.md
@@ -997,7 +997,7 @@ next: ../02/EA_02_01.html
 </tr>
   <tr>
     <td class='ch' title='T125.2.552a2'>「『「我今已食人中之福，宜當自勉昇天之徳。 剃除鬚髮，著三法衣，以信堅固，出家，學道，離於眾苦。」</td>
-    <td class='blockquote' id='p30'>30. “Now, I’ve enjoyed the fortunes that are among humans,<sup id="ref28"><a href="#n28">28</a></sup> but I must apply myself to the virtues that ascend to Heaven. I’ll cut off my hair and beard, put on the three-piece Dharma robe, become steadfast in faith, leave home, and train on the path that parts with all manner of pain.”</td>
+    <td class='blockquote' id='p30'>30. “Now, I’ve enjoyed the fortunes that are among humans,<sup id="ref28"><a href="#n28">28</a></sup> but I must apply myself to the virtues that ascend to heaven. I’ll cut off my hair and beard, put on the three-piece Dharma robe, become steadfast in faith, leave home, and train on the path that parts with all manner of pain.”</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.552a4'>「『爾時，王摩訶提婆便告第一太子名曰長壽： 「卿今知，不？ 吾首已生白髮。 意欲剃除鬚髮，著三法衣，以信堅固，出家，學道，離於眾苦。 汝紹吾位，以法治化。 勿令有失，違吾言教，造凡夫行。 所以然者？ 若有斯人違吾言者，便為凡夫之行。 凡夫者長處三塗、八難之中。」</td>
@@ -1031,7 +1031,7 @@ next: ../02/EA_02_01.html
 </tr>
   <tr>
     <td class='ch' title='T125.2.553c7'>「『「我今已食人中之福，宜當自勉昇天之徳。剃除鬚髮，著三法衣，以信堅固，出家，學道，離於眾苦。」</td>
-    <td class='blockquote' id='p35'>35. “Now, I’ve enjoyed the fortunes that are among humans, but I must apply myself to the virtues that ascend to Heaven. I’ll cut off my hair and beard, put on the three-piece Dharma robe, become steadfast in faith, leave home, and train on the path that parts with all manner of pain.”</td>
+    <td class='blockquote' id='p35'>35. “Now, I’ve enjoyed the fortunes that are among humans, but I must apply myself to the virtues that ascend to heaven. I’ll cut off my hair and beard, put on the three-piece Dharma robe, become steadfast in faith, leave home, and train on the path that parts with all manner of pain.”</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.553c9'>「『時，長壽王告第一太子善觀曰： 「卿今知，不？ 吾已首上生白髮。 意欲剃除鬚髮，著三法衣，以信堅固，出家，學道，離於眾苦。 汝紹吾位，以法治化。 勿令有失，違吾言教，造凡夫行。 所以然者？ 若有斯人違吾言者，為凡夫之行。 夫凡夫者長處三塗、八難之中。」</td>
@@ -1225,7 +1225,7 @@ next: ../02/EA_02_01.html
 </tr>
   <tr>
     <td class='ch' title='T125.2.552b26'>尊者阿難説是語時，天地六反震動。 諸尊神、天在虚空中手執天華而散尊者阿難上及散四部之眾。 一切天、龍、鬼神、乾沓和、阿須倫、加留羅、甄陀羅、摩休勒等皆懷歡喜而悉歎曰： 「善哉，善哉，尊者阿難！ 上、中、下言悉無不善。 於法當恭敬，誠如所説。 諸天、世人無不從法而得成就。 若有行惡，便墮地獄、餓鬼、畜生。」</td>
-    <td id='p44'>44. When Venerable Ānanda said this, Heaven and Earth shook in six ways. The honored spirits and gods in the sky took heavenly flowers in hand and scattered them over Venerable Ānanda and the fourfold assembly. All the gods, nāgas, yakṣa spirits, gandharvas, asuras, garuḍas, kiṃnaras, and mahoragas felt joyous and praised him: “Good, Venerable Ānanda! Good! In the beginning, middle, and end, none of your words aren’t good. They revere the Dharma as it should be, and they’re spoken sincerely. There’s nothing achieved by gods and worldly people that doesn’t come from the Dharma. Anyone who does evil will fall to Hell or be born among hungry ghosts and animals.”</td>
+    <td id='p44'>44. When Venerable Ānanda said this, heaven and Earth shook in six ways. The honored spirits and gods in the sky took heavenly flowers in hand and scattered them over Venerable Ānanda and the fourfold assembly. All the gods, nāgas, yakṣa spirits, gandharvas, asuras, garuḍas, kiṃnaras, and mahoragas felt joyous and praised him: “Good, Venerable Ānanda! Good! In the beginning, middle, and end, none of your words aren’t good. They revere the Dharma as it should be, and they’re spoken sincerely. There’s nothing achieved by gods and worldly people that doesn’t come from the Dharma. Anyone who does evil will fall to hell or be born among hungry ghosts and animals.”</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.552c4'>爾時，尊者阿難於四部眾中而師子吼，勸一切人奉行此法。 爾時，座上三萬天人得法眼淨。 爾時，四部之眾諸天、世人聞尊者所説歡喜，奉行。</td>
