--- a/01_agama/ekottarika/09/EA_09_05.md
+++ b/01_agama/ekottarika/09/EA_09_05.md
@@ -19,7 +19,7 @@ next: EA_09_06.html
   </tr>
   <tr>
     <td class='ch' title='T125.2.562c19'>爾時，世尊告諸比丘： 「我恒觀見一人心中所念之事： 『此人，如屈伸臂頃，墮泥㴝中。』 所以然者？ 由惡心故，心之生病，墜墮地獄。</td>
-    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “When I continuously examine the things that a person thinks about in their mind, I see: ‘This person will fall to Hell<sup id="ref2"><a href="#n2">2</a></sup> in the time it takes to flex their arm.’ Why is that? Because of their evil thoughts, their mind becomes ill, and they fall down into Hell.”</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “When I continuously examine the things that a person thinks about in their mind, I see: ‘This person will fall to hell<sup id="ref2"><a href="#n2">2</a></sup> in the time it takes to flex their arm.’ Why is that? Because of their evil thoughts, their mind becomes ill, and they fall down into hell.”</td>
   </tr>
   <tr>
     <td class='ch' title='T125.2.562c22'>爾時，世尊便説偈言：</td>
@@ -49,7 +49,7 @@ next: EA_09_06.html
   <td><ul class='verse'>
     <li>Supposing their life were to end<br/>
     Right at this moment in time,<br/>
-    Then they would be sent to Hell<br/>
+    Then they would be sent to hell<br/>
     Because of their mind’s defiled conduct.</li>
   </ul></td>
 </tr>
@@ -69,7 +69,7 @@ next: EA_09_06.html
 
 <ol class="notes-list">
 <li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0562c18" target="_blank">T125.2.562c18-29</a>. This <em>sūtra</em> is parallel to <a href="https://www.suttacentral.net/an1.43" target="_blank">AN 1.43</a> and <a href="https://www.suttacentral.net/iti20" target="_blank">Iti 20</a>. [<a href="#ref1">back</a>]</p></li>
-<li id="n2"><p><em>Hell</em>. C. 泥㴝 or 泥犂 (MC. nei-lei = G. <em>nara[ga]</em>), P/S. <em>naraka</em>. The Chinese transliterates the Indic word that was equivalent to English “Hell” as a place of punishment in the afterlife. <em>Naraka</em> literally means a pit, so a literal translation to English could be “the Pit.” The next occurrence of “Hell,” however, translates the Indic name to Chinese as 地獄 (lit. “earth prison”). [<a href="#ref2">back</a>]</p></li>
+<li id="n2"><p><em>hell</em>. C. 泥㴝 or 泥犂 (MC. nei-lei = G. <em>nara[ga]</em>), P/S. <em>naraka</em>. The Chinese transliterates the Indic word that was equivalent to English “hell” as a place of punishment in the afterlife. <em>Naraka</em> literally means a pit, so a literal translation to English could be “the pit.” The next occurrence of “hell,” however, translates the Indic name to Chinese as 地獄 (lit. “earth prison”). [<a href="#ref2">back</a>]</p></li>
 </ol>
 <hr/>
 
